--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>screen-recorder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jcodec</groupId>
+            <artifactId>jcodec</artifactId>
+            <version>0.2.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
